--- a/tests/fixtures/commands/drupal.yml
+++ b/tests/fixtures/commands/drupal.yml
@@ -2,3 +2,10 @@
   configuration: []
   output:
     - "./vendor/bin/drush -y --root=./build --site-name='Site name' --site-mail=info@example.org --locale=en --account-mail=admin@example.org --account-name=admin --account-pass=admin --exclude=build --db-url='mysql://root:root@127.0.0.1:3306/drupal' site-install standard"
+
+- command: 'drupal:site-install --site-name "Test site"'
+  configuration: []
+  output:
+    - "./vendor/bin/drush -y --root=./build --site-name='Test site' --site-mail=info@example.org --locale=en --account-mail=admin@example.org --account-name=admin --account-pass=admin --exclude=build --db-url='mysql://root:root@127.0.0.1:3306/drupal' site-install standard"
+
+
