--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,11 @@
     },
     "autoload": {
         "psr-4": {
-            "EC\\OpenEuropa\\TaskRunner\\": "./src/",
+            "EC\\OpenEuropa\\TaskRunner\\": "./src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
             "EC\\OpenEuropa\\TaskRunner\\Tests\\": "./tests/"
         }
     },
