--- a/tests/fixtures/tasks/replace-config-tokens/extract.yml
+++ b/tests/fixtures/tasks/replace-config-tokens/extract.yml
@@ -15,3 +15,10 @@
   expected:
     '${token.four}': 'token.four'
 
+-
+  text: >
+    <php>
+      <env name="BASE_URL" value="${drupal.base-url}"/>
+    </php>
+  expected:
+    '${drupal.base-url}': 'drupal.base-url'
