--- a/tests/fixtures/simulation.yml
+++ b/tests/fixtures/simulation.yml
@@ -1,12 +1,12 @@
 - command: drupal:site-install
   configuration: []
   contains:
-    - "[Simulator] Running ./vendor/bin/drush -y --root=./build --site-name='Site name' --site-mail=info@example.org --locale=en --account-mail=admin@example.org --account-name=admin --account-pass=admin --exclude=build --db-url='mysql://root:root@127.0.0.1:3306/drupal' site-install standard"
+    - "[Simulator] Running ./vendor/bin/drush -y --root=./build --site-name='Site name' --site-mail=info@example.org --locale=en --account-mail=admin@example.org --account-name=admin --account-pass=admin --exclude=./build --db-url='mysql://root:root@127.0.0.1:3306/drupal' site-install standard"
 
 - command: 'drupal:site-install --site-name="Test site"'
   configuration: []
   contains:
-    - "[Simulator] Running ./vendor/bin/drush -y --root=./build --site-name='Test site' --site-mail=info@example.org --locale=en --account-mail=admin@example.org --account-name=admin --account-pass=admin --exclude=build --db-url='mysql://root:root@127.0.0.1:3306/drupal' site-install standard"
+    - "[Simulator] Running ./vendor/bin/drush -y --root=./build --site-name='Test site' --site-mail=info@example.org --locale=en --account-mail=admin@example.org --account-name=admin --account-pass=admin --exclude=./build --db-url='mysql://root:root@127.0.0.1:3306/drupal' site-install standard"
 
 
 - command: 'drupal:site-install --site-mail="test@example.com" --site-profile=minimal'
@@ -18,21 +18,21 @@
 - command: 'drupal:site-install'
   configuration:
     drupal:
-      root: 'test'
+      root: './test'
       site:
         profile: 'minimal'
   contains:
     - "./vendor/bin/drush -y --root=./test"
     - "site-install minimal"
 
-- command: 'drupal:site-install --root="overridden"'
+- command: 'drupal:site-install --root="./overridden"'
   configuration:
     drupal:
-      root: 'test'
+      root: './test'
   contains:
     - "./vendor/bin/drush -y --root=./overridden"
 
-- command: 'drupal:site-install --root="overridden"'
+- command: 'drupal:site-install --root="./overridden"'
   configuration:
     runner:
       bin-dir: "./bin"
@@ -72,3 +72,15 @@
   contains:
     - "[Simulator] Running ./vendor/bin/run 'setup:behat'"
     - "[Simulator] Running ./vendor/bin/run 'setup:phpunit'"
+    - "WriteConfiguration('./build/sites/default/drushrc.php'"
+    - "AppendConfiguration('./build/sites/default/default.settings.php'"
+
+- command: 'drupal:scaffold'
+  configuration:
+    drupal:
+      root: "./web"
+  contains:
+    - "[Simulator] Running ./vendor/bin/run 'setup:behat'"
+    - "[Simulator] Running ./vendor/bin/run 'setup:phpunit'"
+    - "WriteConfiguration('./web/sites/default/drushrc.php'"
+    - "AppendConfiguration('./web/sites/default/default.settings.php'"
