Issue #6: Fix site install root option.

--- a/tests/fixtures/setup.yml
+++ b/tests/fixtures/setup.yml
@@ -3,7 +3,7 @@
     test1: ${drupal.root}
     test2: ${drupal.core}
   expected: >
-    test1: ./build
+    test1: build
     test2: 8
 
 - command: setup:behat
