Issue #14: Fix Drush exclusion.

--- a/config/runner.yml
+++ b/config/runner.yml
@@ -26,7 +26,7 @@ drupal:
     password: "root"
   drush:
     options:
-      exclude: "${drupal.root}"
+      ignored-directories: "${drupal.root}"
   settings:
     conf:
       file_scan_ignore_directories:
