Issue #15: Make sure post install can be empty.

--- a/tests/fixtures/simulation.yml
+++ b/tests/fixtures/simulation.yml
@@ -67,6 +67,14 @@
     - "./vendor/bin/drush en views -y"
     - "./vendor/bin/drush cr"
 
+- command: 'drupal:site-install'
+  configuration:
+    drupal:
+      post_install: []
+  composer: ''
+  contains:
+    - "[Simulator] Running ./vendor/bin/drush -y --root=$(pwd)/build --site-name='Site name' --site-mail=info@example.org --locale=en --account-mail=admin@example.org --account-name=admin --account-pass=admin --exclude=build --db-url='mysql://root:root@127.0.0.1:3306/drupal' site-install standard"
+
 - command: 'changelog:generate'
   configuration:
     github:
