--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,14 @@ language: php
 
 php:
   - 5.6
-  - 7
+  - 7.0
+  - 7.1
+  - 7.2
 
 env:
   global:
     - PATH=$PATH:/home/travis/.composer/vendor/bin
+    - COMPOSER_MEMORY_LIMIT=2G
 
 install:
   - composer self-update
