Issue #21: Fix command discovery.

--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "autoload-dev": {
         "psr-4": {
             "EC\\OpenEuropa\\TaskRunner\\Tests\\": "./tests/",
-            "EC\\OpenEuropa\\TaskRunner\\My\\Custom\\": "./tests/custom/src/"
+            "EC\\My\\Custom\\": "./tests/custom/src/"
         }
     },
     "bin": ["bin/run"]
