Issue #25: Remove custom path trait in favour of Symfony Filesystem.

--- a/tests/fixtures/simulation.yml
+++ b/tests/fixtures/simulation.yml
@@ -124,7 +124,7 @@
       "type": "drupal-module"
     }
   contains:
-    - "symlink('../../..', 'build/modules/custom/bar')"
+    - "symlink('../../../', 'build/modules/custom/bar')"
     - "[Simulator] Running ./vendor/bin/run 'setup:behat'"
     - "[Simulator] Running ./vendor/bin/run 'setup:phpunit'"
     - "AppendConfiguration('build/sites/default/default.settings.php'"
@@ -141,7 +141,7 @@
       "type": "drupal-theme"
     }
   contains:
-    - "symlink('../../..', 'web/themes/custom/bar')"
+    - "symlink('../../../', 'web/themes/custom/bar')"
     - "WriteConfiguration('web/sites/default/drushrc.php'"
     - "File\\Write('web/sites/default/drush.yml')"
 
@@ -155,7 +155,7 @@
       "type": "drupal-module"
     }
   contains:
-    - "symlink('../../../../..', 'build/sites/all/modules/custom/bar')"
+    - "symlink('../../../../../', 'build/sites/all/modules/custom/bar')"
 
 - command: 'drupal:component-scaffold'
   configuration:
@@ -167,16 +167,16 @@
       "type": "drupal-theme"
     }
   contains:
-    - "symlink('../../../../..', 'build/sites/all/themes/custom/bar')"
+    - "symlink('../../../../../', 'build/sites/all/themes/custom/bar')"
 
 - command: 'drupal:site-setup'
   configuration: []
   composer: ''
   contains:
-    - "symlink('../../custom/modules', 'build/modules/custom')"
-    - "symlink('../../custom/themes', 'build/themes/custom')"
-    - "symlink('../../custom/profiles', 'build/profiles/custom')"
-    - "symlink('../../custom/libraries', 'build/libraries/custom')"
+    - "symlink('../../custom/modules/', 'build/modules/custom')"
+    - "symlink('../../custom/themes/', 'build/themes/custom')"
+    - "symlink('../../custom/profiles/', 'build/profiles/custom')"
+    - "symlink('../../custom/libraries/', 'build/libraries/custom')"
     - "AppendConfiguration('build/sites/default/default.settings.php'"
     - "WriteConfiguration('build/sites/default/drushrc.php'"
     - "File\\Write('build/sites/default/drush.yml')"
@@ -187,10 +187,10 @@
       root: 'overridden'
   composer: ''
   contains:
-    - "symlink('../../custom/modules', 'overridden/modules/custom')"
-    - "symlink('../../custom/themes', 'overridden/themes/custom')"
-    - "symlink('../../custom/profiles', 'overridden/profiles/custom')"
-    - "symlink('../../custom/libraries', 'overridden/libraries/custom')"
+    - "symlink('../../custom/modules/', 'overridden/modules/custom')"
+    - "symlink('../../custom/themes/', 'overridden/themes/custom')"
+    - "symlink('../../custom/profiles/', 'overridden/profiles/custom')"
+    - "symlink('../../custom/libraries/', 'overridden/libraries/custom')"
     - "AppendConfiguration('overridden/sites/default/default.settings.php'"
     - "WriteConfiguration('overridden/sites/default/drushrc.php'"
     - "File\\Write('overridden/sites/default/drush.yml')"
@@ -199,10 +199,10 @@
   configuration: []
   composer: ''
   contains:
-    - "symlink('../../custom/modules', 'web/modules/custom')"
-    - "symlink('../../custom/themes', 'web/themes/custom')"
-    - "symlink('../../custom/profiles', 'web/profiles/custom')"
-    - "symlink('../../custom/libraries', 'web/libraries/custom')"
+    - "symlink('../../custom/modules/', 'web/modules/custom')"
+    - "symlink('../../custom/themes/', 'web/themes/custom')"
+    - "symlink('../../custom/profiles/', 'web/profiles/custom')"
+    - "symlink('../../custom/libraries/', 'web/libraries/custom')"
     - "[Simulator] Running ./vendor/bin/run 'setup:behat'"
     - "[Simulator] Running ./vendor/bin/run 'setup:phpunit'"
     - "AppendConfiguration('build/sites/default/default.settings.php'"
