--- a/tests/fixtures/simulation.yml
+++ b/tests/fixtures/simulation.yml
@@ -88,33 +88,45 @@
   configuration:
     github:
       token: "abc"
-  composer: ''
+  composer: >
+    {
+      "name": "foo/bar"
+    }
   contains:
-    - "exec('ec-europa/oe-task-runner -t abc')"
+    - "exec('foo/bar -t abc')"
 
 - command: 'changelog:generate --token def'
   configuration:
     github:
       token: "abc"
-  composer: ''
+  composer: >
+    {
+      "name": "foo/bar"
+    }
   contains:
-    - "exec('ec-europa/oe-task-runner -t def')"
+    - "exec('foo/bar -t def')"
 
 - command: 'changelog:generate --tag 1.2.3'
   configuration:
     github:
       token: "abc"
-  composer: ''
+  composer: >
+    {
+      "name": "foo/bar"
+    }
   contains:
-    - "exec('ec-europa/oe-task-runner -t abc --future-release=1.2.3')"
+    - "exec('foo/bar -t abc --future-release=1.2.3')"
 
 - command: 'changelog:generate --token 123 --tag 1.2.3'
   configuration:
     github:
       token: "abc"
-  composer: ''
+  composer: >
+    {
+      "name": "foo/bar"
+    }
   contains:
-    - "exec('ec-europa/oe-task-runner -t 123 --future-release=1.2.3')"
+    - "exec('foo/bar -t 123 --future-release=1.2.3')"
 
 - command: 'drupal:component-scaffold'
   configuration: []
